tests/errors/coarray_02.f90
program coarray_02
    call event_query(1, 1, 1)
end program coarray_02